@@ -28,6 +28,7 @@ Zach Bean                zb at forty2 dot com
 Aristotle Pagaltzis      pagaltzis at gmx dot de
 LoneFox                  lonefox at welho dot com
 Marc 'HE' Brockschmidt   marc at marcbrockschmidt dot de
+Daniel Kasak             dkasak at nusconsulting dot com dot au
 
 several important bits of gtk2-perl were heavily inspired by pygtk, gtk-perl,
 and a good read-through of the gtk+ source code, so credit goes to those guys
